<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ad"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.w10.itgcoea.navigator.ContactUs"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">





            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="18sp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="Contact Information"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:textAlignment="center"
                        android:padding="5dp"
                        />

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title"
                        android:maxLines="1"
                        android:text="@string/mt1"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"

                        />

                    <TextView
                        android:id="@+id/description1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title1"
                        android:maxLines="6"
                        android:paddingLeft="12dp"
                        android:textStyle="bold"
                        android:paddingRight="12dp"
                        android:text="@string/md1"
                        android:textColor="#172E8E"
                        android:textSize="18dp"

                        />

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_below="@+id/description1"
                        android:maxLines="1"
                        android:text="@string/mt2"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        />


                    <TextView
                        android:id="@+id/description2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title2"
                        android:maxLines="6"
                        android:paddingLeft="12dp"
                        android:text="@string/md2"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_below="@+id/description2"
                        android:maxLines="2"
                        android:text="@string/mt3"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>

                    <TextView
                        android:id="@+id/description3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title3"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/md3"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/title4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_below="@+id/description3"
                        android:maxLines="1"
                        android:text="@string/mt4"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>


                    <TextView
                        android:id="@+id/description4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title4"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/md4"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:id="@+id/title5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_below="@+id/description4"
                        android:maxLines="1"
                        android:text="@string/mt5"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>


                    <TextView
                        android:id="@+id/description5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title5"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/md5"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:id="@+id/title6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_below="@+id/description5"
                        android:maxLines="1"
                        android:text="@string/mt6"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>


                    <TextView
                        android:id="@+id/description6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title6"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/md6"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:id="@+id/title7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_below="@+id/description6"
                        android:maxLines="1"
                        android:text="@string/mt7"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>


                    <TextView
                        android:id="@+id/description7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title7"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/md7"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        />
                    <TextView
                        android:id="@+id/title8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_below="@+id/description7"
                        android:maxLines="1"
                        android:text="@string/mt8"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>


                    <TextView
                        android:id="@+id/description8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title8"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/md8"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        />
                    <TextView
                        android:id="@+id/title9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_below="@+id/description8"
                        android:maxLines="1"
                        android:text="@string/mt9"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>


                    <TextView
                        android:id="@+id/description9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title9"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/md9"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        />


                </RelativeLayout>
            </android.support.v7.widget.CardView>












        </RelativeLayout>


    </ScrollView>

</RelativeLayout>

































